kube-apiserver/kube-apiserver.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kube-apiserver
  name: kube-apiserver
spec:
  port:
    targetPort: 6443
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: kube-apiserver
    weight: 100
  wildcardPolicy: None
